--- a/index.html
+++ b/index.html
@@ -2,32 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Build The Community Your Fans Will Love
-
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
-
-  Register
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <picture >
+    <source srcset="images/bg-mobile.svg" media="(max-width: 900px)">
+    <img src="images/bg-desktop.svg" class="background">
+  </picture>
+  <div class="container">
+    <img src="images/logo.svg" class="logo">
+    <div class="mainPart">
+      <img src="images/illustration-mockups.svg" class="mainImg">
+      <div class="description">
+        <h1>Build The Community<br> Your Fans Will Love</h1>
+        <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
+          Create connections with your users as you engage in genuine discussion.</p>
+        <button type="button" class="mainButton">Register</button>
+      </div>
+    </div>
+    <div class="iconContainer">
+      <ion-icon name="logo-facebook" class="icon"></ion-icon>
+      <ion-icon name="logo-twitter" class="icon"></ion-icon>
+      <ion-icon name="logo-instagram" class="icon"></ion-icon>
+    </div>
+  </div>
+  <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 </body>
 </html>
